fix(ui-kit): bottom sheet overflow test

--- a/components/bottom-sheet/BottomSheet.scss
+++ b/components/bottom-sheet/BottomSheet.scss
@@ -21,7 +21,7 @@
 
     &__header {
         flex-shrink: 0;
-        margin-top: $base-indent / 2;
+        //margin-top: $base-indent / 2;
         margin-bottom: $base-indent;
         //padding: $base-indent / 2 0;
     } //.c-bottom-sheet_header
